cabal-version:      3.4
name:               sedition
version:            0.1.0.0

category:           Compiler
synopsis:           sed compiler and interpreter
description:        Optimizing sed compiler and interpreter with networking and threads

license:            MIT
copyright:          Copyright (C) 2017 Simon Brenner
author:             Simon Brenner <olsner@gmail.com>
maintainer:         olsner@gmail.com

bug-reports:        https://github.com/olsner/sedition

extra-source-files:
    README.md sedition.h stringlib.h

source-repository head
  type:     git
  location: https://github.com/olsner/sedition

common lang
    default-language: Haskell2010
    build-depends:    base ^>=4.15.0.0
    ghc-options:      -O2

common deps
    build-depends:    bytestring, utf8-string,
                      containers,
                      transformers,
                      trifecta,
                      regex-base, regex-posix,

common warn
    ghc-options: -Widentities -Wcompat -Wall -Wno-name-shadowing -Wno-missing-signatures

executable sedition
    import:           lang
    import:           deps
    import:           warn

    main-is:          Sed.hs

    other-modules:    Parser AST Bus IR
                      Collections
                      Optimize
                      Optimize.ConstPred
                      Optimize.RedundantBranches
                      Optimize.LivePred
                      Optimize.LiveString
                      Optimize.SameString
                      Optimize.LiveMatch
                      Optimize.LiveLastRegex
                      Compile Interpret
                      -- TODO Extract a library for the regex parts
                      Regex.Regex
                      Regex.TaggedRegex
                      Regex.TNFA
                      Regex.TDFA
                      Regex.TDFA2IR
                      Regex.SimulateTNFA
                      Regex.SimulateTDFA
                      Regex.IR
                      Regex.OptimizeIR
                      Regex.RunIR
                      Regex.CompileIR
                      Regex.Optimize.LiveRegister
                      Regex.Optimize.LiveSaveCursor
                      Regex.Optimize.LiveSetFallback
                      Regex.Optimize.PossibleFallback
                      Regex.Optimize.RedundantBranches
                      Regex.Optimize.RedundantCheckBounds
                      Regex.Optimize.RedundantRestoreCursor
                      Regex.Optimize.SameResult
                      CharMap GenC

    build-depends:    hoopl,
                      regex-posix,
                      array,
                      time,
                      -- For the compiler
                      file-embed,
                      -- For the interpreter
                      random,
                      network,
                      process,
    hs-source-dirs:   .

executable tdfa2c
    import:           lang
    import:           deps
    import:           warn

    main-is:          Regex/TestTDFA2C.hs

    other-modules:    Regex.Regex
                      Regex.TaggedRegex
                      Regex.TNFA
                      Regex.TDFA
                      Regex.SimulateTNFA
                      Regex.SimulateTDFA
                      Regex.IR
                      Regex.TDFA2IR
                      Regex.OptimizeIR
                      Regex.RunIR
                      Regex.CompileIR
                      Regex.Optimize.LiveRegister
                      Regex.Optimize.LiveSaveCursor
                      Regex.Optimize.LiveSetFallback
                      Regex.Optimize.PossibleFallback
                      Regex.Optimize.RedundantBranches
                      Regex.Optimize.RedundantCheckBounds
                      Regex.Optimize.RedundantRestoreCursor
                      Regex.Optimize.SameResult
                      Collections CharMap GenC
                      -- TODO Split out Regex.Collections to avoid AST/IR
                      -- dependency in regex parts.
                      AST IR

    build-depends:    time, process, file-embed, hoopl
    hs-source-dirs:   .

test-suite parser-test
    import:           lang
    import:           deps
    import:           warn

    type:             exitcode-stdio-1.0
    main-is:          ParserTest.hs
    other-modules:    AST Parser

test-suite regex-parser-test
    import:           lang
    import:           deps
    import:           warn

    type:             exitcode-stdio-1.0
    main-is:          Regex/RegexParserTest.hs
    other-modules:    Regex.Regex
